<package format="2">
  <name>exp_ros_ws_robot</name>
  <version>0.0.1</version>
  <description>
    launch file for exp env.
  </description>
  <maintainer email="m.yoshi.1700@gmail.com">Masahiko Toyoshi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
